css/game.css
@font-face {
  font-family: 'Press Start 2P';
  src: url('../fonts/PressStart2P-Regular.eot'),
  url('../fonts/PressStart2P-Regular.ttf') format('truetype'),
  url('../fonts/PressStart2P-Regular.svg') format('svg');
  font-weight: normal;
  font-style: normal;
}

:root {
  --main-color: #81A1C3;
  --rm-red: #ec5246;
}

* {
  box-sizing: border-box;
  margin: 0;
}
body {
  margin: 0;
  font-family: 'Press Start 2P', cursive;
  font-size: 16px;
  line-height: 160%;
}
img {
  max-width: 100%;
}
a {
  text-decoration: none;
  color: inherit;
}

/* ---------- utils */

.hide {
  display: none !important;
}
.align-right {
  text-align: right;
}
.align-left {
  text-align: left;
}
.wrapper {
  width: 100%;
  max-width: 500px;
  text-align: center;
}
.button {
  background-color: white;
  box-shadow: 0 4px 0 0 black;
  border-radius: 50px;
  display: inline-block;
  text-decoration: none;
  color: black;
  text-transform: uppercase;
  line-height: initial;
  cursor: pointer;
}
/* .button:hover, */
.btn-big:hover,
.btn-small:hover {
  box-shadow: none;
  transform: translateY(4px);
}
.btn-big {
  padding: 1.25em 2.5em;
}
.btn-small {
  padding: .75em 1.25em .65em;
}
.headline {
  font-size: 1.5em;
  line-height: 120%;
}
.popup {
  background-color: var(--main-color);
  padding: 20px;
  border: 4px solid white;
  border-radius: 5px;
}
.text-input {
  font-family: 'Press Start 2P', cursive;
  font-size: 1em;
  padding: 1.25em;
  max-width: 100%;
  border: none;
  border-radius: 5px;
  box-shadow: 0 4px 0 0 black;
}
.text-input::placeholder {
  color: black;
  opacity: .15;
  text-transform: uppercase;
}
.text-input:focus {
  outline: none;
}
.input-label {
  display: inline-block;
  font-size: .75rem;
  margin-bottom: .625rem;
  line-height: initial;
}

/* ---------- welcome screen */

.welcome-main {
  background-color: var(--main-color);
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 30px;
}
.team-picture {
  width: 100%;
  height: 200px;
  max-height: 50vh;
  overflow: hidden;
  display: flex;
  align-items: center;
  margin-bottom: 30px;
}
.team-picture-img {
  display: inline-block;
  width: 100%;
}
.welcome-signature {
  font-size: .875em;
  margin: 2.5em 0 3.5em;
}

/* ---------- select screen */

.select-main {
  background-color: var(--main-color);
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 30px;
  background-image: url('../imgs/snowflake.png');
  background-size: 100px;
  background-position: center;
  background-repeat: space;
}

.select-name-welcome {
  margin: 1.25em 0 3.125em;
  position: relative;
}
.select-name-snowflakes {
  position: absolute;
  width: 100%;
  top: 0;
  display: flex;
  justify-content: space-between;
}
.select-name-snowflakes .snowflake {
  width: 1.75em;
}
.select-name-welcome-p {
  margin-bottom: .75em;
}
.select-name-form {
  margin-bottom: 1.25em;
}
.select-name-error {
  display: inline-block;
  font-size: .75em;
  margin-top: .625em;
  color: var(--rm-red);
  text-shadow:
  -1px -1px 0 white,  
  1px -1px 0 white,
  -1px 1px 0 white,
  1px 1px 0 white;
}

.popup-back-btn {
  font-size: .625em;
}
.select-avatar-intro {
  margin: 2em 1.75em;
}
.select-avatar-intro-name {
  font-size: 1.25em;
  word-wrap: break-word;
}
.select-avatar-intro-label {
  font-size: .75em;
  margin-top: 1.5rem;
  line-height: 160%;
}

.select-avatar-grid {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 10px;
  width: 100%;
  margin-bottom: 3.75em;
}
.avatar-grid-item {
  flex: 0 1 30%;
}
.avatar-img-container {
  border-radius: 10px;
  display: flex;
  overflow: hidden;
  padding: 10px;
}
.avatar-name {
  font-size: .625em;
  margin-top: .625em;
}
.avatar-focus .avatar-img-container {
  background-color: white;
}
.avatar-focus .avatar-name {
  color: white;
}

/* ---------- game */

.game {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  position: relative;
}
.world {
  overflow: hidden;
  position: relative;
}
.score {
  position: absolute;
  text-align: center;
  font-size: 1.5em;
  top: 3rem;
}
.score-hiscore {
  margin-top: .625em;
  font-size: .5em;
}

.controls {
  position: fixed;
  bottom: 5vh;
  font-size: 20px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  padding: 0 10vw;
}
.controls-btn {
  background-color: var(--main-color);
  padding: 1rem;
  border-radius: 20px;
}
.controls-char {
  pointer-events: none;
  font-size: 1.25em;
  display: inline-block;
  transform: rotateZ(-90deg);
  color: white;
  padding: .19em 0 0 .125em;
}
.controls-caption {
  font-size: .625em;
  margin-top: .625em;
  text-align: center;
  text-transform: uppercase;
}

.start-screen {
  box-shadow: -2px 2px 24px 0px rgba(0,0,0,0.59);
  text-align: center;
}
.start-screen-title {
  margin-bottom: 1rem;
  text-transform: uppercase;
}
.start-screen-p {
  font-size: .75em;
  text-transform: uppercase;
}
.end-screen,
.start-screen {
  position: absolute;
  max-width: calc(100% - 40px);
  width: 500px;
  z-index: 2;
  top: 50%;
  transform: translateY(-50%);
}
.end-screen-title {
  margin-top: 2rem;
  text-transform: uppercase;
}
.end-screen-p {
  font-size: .75em;
  margin: 1.5em 0 2em;
}
.end-screen-links {
  margin-top: 2em;
  display: flex;
  flex-direction: column;
  gap: 1.25em;
  align-items: center;
  font-size: .875em;
}
.end-screen-small-links {
  width: 100%;
  display: flex;
  justify-content: space-between;
  color: white;
  font-size: .75em;
  text-transform: uppercase;
  margin-top: 3.25em;
}
.end-screen-small-links .small-link {
  cursor: pointer;
}
.end-screen-small-links .small-link:hover {
  color: black;
}
.end-screen-share {
  padding-bottom: 1.5em;
}
.credits-herop {
  font-size: .75em;
  line-height: 160%;
  margin: 2rem 0 3.25rem;
}
.credits-roles {
  display: flex;
  gap: 3em;
  text-transform: uppercase;
  font-size: .625em;
  line-height: 160%;
}
.game-overlay {
  position: absolute;
  top: 0;
  z-index: 1;
  width: 100vw;
  height: 100vh;
  background-color: var(--main-color);
  opacity: .75;
}

.ground {
  max-width: unset;
  --left: 0;
  position: absolute;
  /* this width value is being referred to in ground.js */
  width: 300%;
  bottom: 0;
  left: calc(var(--left) * 1%);
}
.dino {
  --bottom: 0;
  --height: 30;
  position: absolute;
  left: 1%;
  height: calc(var(--height) * 1%);
  bottom: calc(var(--bottom) * 1%);
}
.cactus {
  position: absolute;
  left: calc(var(--left) * 1%);
  height: 30%;
  bottom: 0;
}
.ptero {
  position: absolute;
  left: calc(var(--left) * 1%);
  height: 25%;
  bottom: 20%;
}

/* ---------- scoreboard */

.scoreboard {
  margin: 1.5em 0 1.75em;
  text-align: left;
  line-height: 120%;
  width: 100%;
}
.scoreboard th,
.scoreboard td {
  font-size: .75em;
}
.scoreboard td.name {
  max-width: 0;
  width: 100%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.scoreboard th {
  background-color: linen;
}
.score-highlighted {
  background-color: burlywood;
}

